--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,13 +14,14 @@
     --popover-foreground: 222.2 47.4% 11.2%;
 
     --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
+    --input: #E9E9EA;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 47.4% 11.2%;
 
-    --primary: 222.2 47.4% 11.2%;
+    --primary: #14B7A5;
     --primary-foreground: 210 40% 98%;
+    --primary-dark: #134E4A;
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -31,7 +32,7 @@
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
-    --ring: 215 20.2% 65.1%;
+    --ring: 173 80% 40% 100%;
 
     --radius: 0.5rem;
   }
