--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,37 @@
   color: white;
   border-radius: 10px;
   padding: 2px;
+  margin-bottom: 5vh;
+  font-weight: 600;
  }
+
+.TextIcon {
+  padding-right: 8px;
+}
+
+.Drawerdivider {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 20px 0;
+  width: 95%;
+  font-size: 12px;
+
+}
+
+
+.Drawerdivider::before, 
+.Drawerdivider::after {
+  content: '';
+  flex: 1;
+  border-bottom: 1px solid #000; 
+  margin: 0 10px;
+}
+
+.AddInput {
+  width: 95%;
+  margin-bottom: 10vh;
+}
 
 
  
